--- a/backend/package.json
+++ b/backend/package.json
@@ -5,18 +5,17 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon"
+        "start": "nodemon --exec ./node_modules/.bin/babel-node src/index.js"
     },
     "author": "tanthanh",
     "license": "ISC",
     "devDependencies": {
-        "nodemon": "^3.1.0",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.3.3"
+        "nodemon": "^3.1.0"
     },
     "dependencies": {
-        "@types/body-parser": "^1.19.5",
-        "@types/express": "^4.17.21",
+        "@babel/core": "^7.23.9",
+        "@babel/node": "^7.23.9",
+        "@babel/preset-env": "^7.23.9",
         "body-parser": "^1.20.2",
         "dotenv": "^16.4.5",
         "express": "^4.18.2",
