--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
         "body-parser": "^1.20.2",
         "dotenv": "^16.4.5",
         "express": "^4.18.2",
+        "moment": "^2.30.1",
         "pg": "^8.11.3",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.37.1",
