--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,13 @@
         "@emotion/styled": "^11.11.0",
         "@mui/material": "^5.15.10",
         "@reduxjs/toolkit": "^2.2.1",
+        "@types/node": "^20.11.20",
+        "@types/react-beautiful-dnd": "^13.1.8",
+        "axios": "^1.6.7",
+        "dotenv": "^16.4.5",
+        "moment": "^2.30.1",
         "react": "^18.2.0",
-        "react-dnd": "^16.0.1",
-        "react-dnd-html5-backend": "^16.0.1",
+        "react-beautiful-dnd": "^13.1.1",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
         "react-toastify": "^10.0.4",
