--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,27 @@
     "dependencies": {
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
+        "@hookform/resolvers": "^3.3.4",
+        "@mui/icons-material": "^5.15.11",
         "@mui/material": "^5.15.10",
+        "@mui/x-date-pickers": "^6.16.2",
         "@reduxjs/toolkit": "^2.2.1",
+        "@types/date-fns": "^2.6.0",
+        "@types/lodash": "^4.14.202",
         "@types/node": "^20.11.20",
         "@types/react-beautiful-dnd": "^13.1.8",
         "axios": "^1.6.7",
+        "date-fns": "^3.3.1",
         "dotenv": "^16.4.5",
+        "install": "^0.13.0",
+        "joi": "^17.12.2",
+        "lodash": "^4.17.21",
         "moment": "^2.30.1",
+        "npm": "^10.4.0",
         "react": "^18.2.0",
         "react-beautiful-dnd": "^13.1.1",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.50.1",
         "react-redux": "^9.1.0",
         "react-toastify": "^10.0.4",
         "redux": "^5.0.1",
