--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon --exec ./node_modules/.bin/babel-node src/index.js"
+        "start": "nodemon --exec ./node_modules/.bin/babel-node src/index.js",
+        "build-src": "babel src -d build --copy-files",
+        "build": "node build/index.js"
     },
     "author": "tanthanh",
     "license": "ISC",
